labs/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: labs-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: labs-backend
  template:
    metadata:
      labels:
        app: labs-backend
    spec:
      containers:
      - name: php
        image: alkrauss48/labs-php:latest
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: labs-backend
spec:
  type: ClusterIP
  selector:
    app: labs-backend
  ports:
  - port: 9000
