labs/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: labs-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: labs-frontend
  template:
    metadata:
      labels:
        app: labs-frontend
    spec:
      containers:
      - name: nginx
        image: alkrauss48/labs-nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: labs-frontend
spec:
  type: NodePort
  selector:
    app: labs-frontend
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30001
