labs/labs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: labs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: labs
  template:
    metadata:
      labels:
        app: labs
    spec:
      containers:
      - name: nginx
        image: alkrauss48/labs-nginx:latest
        ports:
        - containerPort: 80
      - name: php
        image: alkrauss48/labs-php:latest
        ports:
        - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: labs
spec:
  type: NodePort
  selector:
    app: labs
  ports:
  - port: 80
    nodePort: 30001
