labs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: labs-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - labs.thesocietea.org
      secretName: labs-ingress-tls
  rules:
    - host: labs.thesocietea.org
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: labs-frontend
              port:
                number: 80
